the bot can only work with xDai endpoints

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -1,6 +1,8 @@
 STAGE=production
 
-WEB3_ENDPOINT=wss://little-frosty-field.xdai.quiknode.pro/25b211172476a7b94f4d1083a740c4c2fc325b0e/
+# This bot can only work with xDai endpoints
+# WEB3_ENDPOINT=wss://xdai.poanetwork.dev/wss
+WEB3_ENDPOINT=wss://rpc.xdaichain.com/wss
 
 ARBITRAGEUR_PK=YOUR_WALLET_PRIVATE_KEY
 
