Support reading FTX subaccount from environment variable

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -8,3 +8,4 @@ ARBITRAGEUR_PK=YOUR_WALLET_PRIVATE_KEY
 
 FTX_API_KEY=YOUR_FTX_API_KEY
 FTX_API_SECRET=YOUR_FTX_API_SECRET
+# FTP_SUBACCOUNT=YOUR_FTX_SUBACCOUNT_NAME # only provide this if you're using a subaccount for FTX
