feat: create simple echo Telegram bot

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -9,3 +9,7 @@ ARBITRAGEUR_PK=YOUR_WALLET_PRIVATE_KEY
 FTX_API_KEY=YOUR_FTX_API_KEY
 FTX_API_SECRET=YOUR_FTX_API_SECRET
 # FTP_SUBACCOUNT=YOUR_FTX_SUBACCOUNT_NAME # only provide this if you're using a subaccount for FTX
+
+TELEGRAM_WEBHOOK_PATH_SECRET=RANDOM_STRING_TO_PROTECT_YOUR_WEBHOOK
+TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
+TELEGRAM_ADMIN_USER_ID=YOUR_OWN_TELEGRAM_USER_ID
