--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@perp/contract": "1.0.4",
         "async-mutex": "0.2.6",
+        "aws-lambda": "1.0.6",
         "big.js": "5.2.2",
         "ethers": "5.0.19",
         "ftx-api-rest": "0.0.6",
@@ -31,6 +32,7 @@
     "devDependencies": {
         "@testdeck/di-typedi": "0.0.10",
         "@typechain/ethers-v5": "3.0.0",
+        "@types/aws-lambda": "8.10.72",
         "@types/big.js": "4.0.5",
         "@types/lodash": "4.14.154",
         "@types/luxon": "1.22.0",
