--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "clean": "rm -rf ./build ./.serverless ./nyc_output",
         "arbitrage": "env $(cat .env.production | grep -v '#' | xargs) ts-node --files src/index.ts",
         "invoke-local": "sls invoke local --stage production --function arbitrageur",
-        "deploy": "npm run build && sls deploy --aws-s3-accelerate --stage production"
+        "deploy": "npm run build && sls deploy --aws-s3-accelerate --stage production",
+        "show:pnl": "env $(cat .env.production | grep -v '#' | xargs) ts-node --files scripts/show-pnl.ts"
     },
     "author": "",
     "license": "ISC",
