feat: add Prometheus metrics to monitor prices

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -13,3 +13,5 @@ FTX_API_SECRET=YOUR_FTX_API_SECRET
 TELEGRAM_WEBHOOK_PATH_SECRET=RANDOM_STRING_TO_PROTECT_YOUR_WEBHOOK
 TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
 TELEGRAM_ADMIN_USER_ID=YOUR_OWN_TELEGRAM_USER_ID
+
+PROMETHEUS_METRICS_PATH_SECRET=RANDOM_STRING_TO_PROTECT_YOUR_METRICS
