--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "logs:arbitrageur": "sls logs --stage production -f arbitrageur",
         "logs:telegramBot": "sls logs --stage production -f telegramBot",
         "logs:prometheusMetrics": "sls logs --stage production -f prometheusMetrics",
+        "prometheus": "docker run -p 9090:9090 -v ${PWD}/prometheus.yml:/etc/prometheus/prometheus.yml prom/prometheus --config.file=/etc/prometheus/prometheus.yml --log.level=debug",
         "show:pnl": "env $(cat .env.production | grep -v '#' | xargs) ts-node --files scripts/show-pnl.ts",
         "show:prices": "env $(cat .env.production | grep -v '#' | xargs) ts-node --files scripts/show-prices.ts"
     },
